--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light";
 	font-size: 16px;
 	border-bottom: 1px outset rgba(192, 192, 192, 0.5);
-	background: rgba(192, 192, 192, 0.9);
+	background: #CDE3FA;
 	box-shadow: 0px 1px rgba(0, 0, 0, 0.3);
 	color: #000 !important;
 }
@@ -14,4 +14,73 @@ body {
 ul.navbar-nav a {
 	background: rgba(28, 28, 28, 0.1);
 	color: #000 !important;
+}
+
+.intro-header {
+	padding-top:50px;
+	height: 100vh;
+	background: url('../bg_main.jpg') no-repeat center center fixed;
+	background-size: cover;
+}
+
+h1.section-heading {
+    margin-top: 100px;
+    font-size: 3em;
+    color: #321C05;
+}
+
+.intro-divider {
+    width: 400px;
+    border-top: 1px solid #f8f8f8;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+.intro-social-buttons {
+	text-align:center;
+}
+
+.btn {
+	display: inline-block;
+	color: #000;
+	border: 2px outset rgba(0, 0, 0, 0.9);
+	background: #C0C0C0;
+	text-shadow: 1px 1px 1px rgba(0,0,0, 20);
+	box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
+	letter-spacing: 2px;
+	transition: 0.2s;
+}
+
+.btn:hover {
+	color: #fff;
+	border: 2px outset rgba(0, 0, 0, 0.9);
+	background: rgba(0,0,0, 0.9);
+	transform:scale(1.1);
+	transition: 0.2s;
+	text-shadow: 1px 1px 1px rgba(0,0,0, 20);
+	box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
+	letter-spacing: 2px;
+}
+
+@media(max-width:767px) {
+    .intro-message {
+        padding-bottom: 15%;
+    }
+
+    .intro-message > h1 {
+        font-size: 3em;
+    }
+
+    ul.intro-social-buttons > li {
+        display: block;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+
+    ul.intro-social-buttons > li:last-child {
+        margin-bottom: 0;
+    }
+
+    .intro-divider {
+        width: 100%;
+    }
 }
